--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./asset/Omar Mohammed CV .pdf')">
+            onclick="window.open('./asset/Omar Mohammed CV` (1).pdf')">
             Download CV
           </button>
           <button class="btn btn-color-1" onclick="location.href='./#contact'">
